examples/tut-wrong-1.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint G >= G+2
    ┌─ examples/tut-wrong-1.fil:17:38
    │
 17 │     mx := new Mux[32]<G>(op, a0.out, m0.out);
    │                                      ^^^^^^ source is available for @[G+2, G+3]
    │
    ┌─ ./primitives/core.fil:152:13
    │
152 │     @[G, L] in1: #WIDTH,
    │             --- destination's requirement @[G, G+1]
    │

Compilation failed with 1 errors.
